2002-03-31  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/pars: removing from cvs and distro.

	* SkunkWeb/configure.in, SkunkWeb/configure: remove par script,
	added productwiz.

	* SkunkWeb/Services/Makefile.in: put productwiz script in bin/.

	* SkunkWeb/Services/product/productwiz.in: added script to start
	the product wizard, for the truly lazy.

2002-03-30  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: fixed typo in documentation of
	rewrite service, and added documentation of Include directive.

	* SkunkWeb/SkunkWeb/ConfigAdditives.py (__all__): added
	support for "from ConfigAdditives import *"; added Include
	directive

	* SkunkWeb/SkunkWeb/KickStart.py (CONFIG_STRING): now do 
	"from ConfigAdditives import *", which is now preceded by
	the import from SkunkWeb.constants (ConfigAdditives clobbers
	some of the latter)

2002-03-21  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Makefile.in (DEMO_FILES): adding Drew's new files to 
	makefile

2002-03-18  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/sample_webdocs/demo/geeknews/newsvac.comp, dcomps/newsvac.pydcmp:
	added

	* SkunkWeb/sample_webdocs/demo/geeknews/index.html, dcomps/newsforge.pydcmp:
	fixes now that newsforge and linux.com have changed a bit	

2002-03-03  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in (userModuleCleanup): this was being turned
	on in this conf file, by mistake; the default should be 0.

2002-02-24  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/product/productwiz.py: adding a rather
	silly product-making wizard.

	* SkunkWeb/Services/product/productmaker.py (makeProduct): fix for
	when there are no libs.

2002-02-23  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection._convertArgs):
	fix for TypeError (query.keys() when query is None)

	* SkunkWeb/Services/product/manifest.py (write_manifest): some api 
	modifications for productmaker.py.
